--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html>
+<head>
+<title></title>
+</head>
+<body>
+<h1>Список задач</h1>
+<ul>
+<li><a>Купить хлеб</a></li>
+<li><a>Убрать в квартире</a></li>
+</ul>
+    </body>
+<a href="https:www.github.com/">git</a>
+</html>
