--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <title></title>
 </head>
 <body>
-<h1>Список задач</h1>
+<h1>Список задач:</h1>
 <ul>
-<li><a>Купить хлеб</a></li>
-<li><a>Убрать в квартире</a></li>
+<li><b>Купить хлеб</b></li>
+<li>Убрать в квартире</li>
 </ul>
-    </body>
+<img src="downloads/git-github-5" alt="GITHUB">
 <a href="https:www.github.com/">git</a>
+<video src="intro.mp4"></video>
+<audio src="sample.mp3"></audio>
+    </body>
+
 </html>
