--- a/index.html
+++ b/index.html
@@ -7,12 +7,44 @@
 <h1>Список задач:</h1>
 <ul>
 <li><b>Купить хлеб</b></li>
-<li>Убрать в квартире</li>
+<li type="square">Убрать в квартире</li>
 </ul>
-<img src="downloads/git-github-5" alt="GITHUB">
+<img src="https://cdn.worldvectorlogo.com/logos/git.svg" alt="GITHUB" width="100" height="100">
 <a href="https:www.github.com/">git</a>
 <video src="intro.mp4"></video>
 <audio src="sample.mp3"></audio>
-    </body>
+<section>
+<article>
+<header>
+<h1>HTML</h1>
+</header>
+<footer>
+<nav>
+<a href="test1">test1</a>
+<a href="test2">test2</a>
+<p><aside>join</aside></p>
+<p>
+<table border="1">
+<th>Row1</th>
+<tr>
+<td>Some data</td>
+<td>Some data</td>
+<td>Some data</td>
+</tr>
+
+</table>
+</p>
+
+<form id="Name"></form>
+<input type="e-mail" required placeholder="your e-mail">
+<input type="email" name="EmployeeID" id="empID" pattern="{A-z}{0-9}">
+<input type="password" name="" id="">
+<!--патерни очень нужни при заполнении различніх форм-->
+</nav>
+</footer>
+</article>
+</section>
+</body>
+
 
 </html>
