--- a/index.html
+++ b/index.html
@@ -1,4 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
+<html>
+    <head>
+        <title>Sample Website</title>
+        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <h1>This is a header</h1>
+        </header>
+        <section>
+            <nav>
+                <p>Links:</p>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </ul>
+            </nav>
+            <article>
+                <p>Here goes main section</p>
+            </article>
+        </section>
+        <footer>
+            <p>Footer is here</p>
+        </footer>
+    </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<!DOCTYPE html>
 <html>
 <head>
 <title></title>
@@ -39,7 +101,7 @@
 <input type="e-mail" required placeholder="your e-mail">
 <input type="email" name="EmployeeID" id="empID" pattern="{A-z}{0-9}">
 <input type="password" name="" id="">
-<!--патерни очень нужни при заполнении различніх форм-->
+патерни очень нужни при заполнении различніх форм
 </nav>
 </footer>
 </article>
@@ -47,4 +109,4 @@
 </body>
 <button type="reset"></button>
 
-</html>
+</html>-->
