--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </article>
         </section>
         <footer>
-            <p>Footer is here</p>
+            <p>Footer is heree</p>
         </footer>
     </body>
 </html>
