--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style1.css" type="text/css">
-    <!--<script src="page.js"><script>-->
+    <script src="page.js"></script>
     <title>Document</title>
 </head>
 <header class="header">
@@ -24,7 +24,7 @@
 
   <div class="popover">
     <div class="content">
-      <!--PRODUCTS POPOVER-->
+      <!-- PRODUCTS POPOVER -->
       <section class="section section-products">
         <ul class="navlist-primary">
           <li class="navlist-primary-payments">
@@ -51,6 +51,7 @@
         </ul>
       </section>
 
+      <!-- DEVELOPERS POPOVER -->
       <section class="section section-developers">
         <ul class="navlist">
           <li>Documentation</li>
@@ -94,8 +95,7 @@
     <div class="arrow"></div>  
   </div>
 </header>
-    
-</body>
+
 </html>
 
 
